<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oryxos</groupId>
    <artifactId>oryxos</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>OryxOS</name>
    <description>Enterprise Agent OS — Java native, private, auditable Agent harness</description>

    <modules>
        <module>oryxos-core</module>
        <module>oryxos-provider</module>
        <module>oryxos-memory</module>
        <module>oryxos-tool</module>
        <module>oryxos-channel-cli</module>
        <module>oryxos-web</module>
        <module>oryxos-storage</module>
        <module>oryxos-cli</module>
        <module>oryxos-boot</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.4.0</spring-boot.version>
        <spring-ai.version>1.0.0-M5</spring-ai.version>
        <spring-ai-alibaba.version>1.0.0-M5</spring-ai-alibaba.version>
        <picocli.version>4.7.6</picocli.version>
        <picocli-spring-boot.version>4.7.6</picocli-spring-boot.version>
        <jackson.version>2.18.0</jackson.version>
        <mcp.version>0.10.0</mcp.version>
        <springdoc.version>2.6.0</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- OryxOS internal modules -->
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-provider</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-tool</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-channel-cli</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-cli</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oryxos</groupId>
                <artifactId>oryxos-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Picocli -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-spring-boot-starter</artifactId>
                <version>${picocli-spring-boot.version}</version>
            </dependency>
            <!-- MCP official Java SDK (US2) -->
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp</artifactId>
                <version>${mcp.version}</version>
            </dependency>
            <!-- OpenAPI docs (US4/Polish) -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
